# projet-cs-2020

./: .gitignore  .ocamlformat  .travis.yml  CONTRIBUTING.md  LICENSE.md  Makefile  Partie1.txt  README.md  bench.opam  benchTools.opam  dune  dune-project  dune-workspace.dev  gdnb.opam  main.ml  matrix.opam  polynome.opam  sort.csv
.github/workflows/: main.yml
_coverage/: index.html
_coverage/lib/matrix/: matrix.ml.html
_coverage/lib/polynome/: polynome.ml.html
docs/: index.html
docs/bench/: index.html
docs/bench/Bench/: index.html
docs/gdnb/: index.html
docs/gdnb/Gdnb/: index.html
docs/matrix/: index.html
docs/matrix/Matrix/: index.html
docs/polynome/: index.html
docs/polynome/Polynome/: index.html
lib/: dune  gdnb.ml  gdnb.mli  matrix.ml  matrix.mli  polynome.ml  polynome.mli  set.ml  set.mli  tools.ml
lib/bench/: bench.ml  bench.mli  dune
lib/benchTools/: benchTools.ml  benchTools.mli  dune
lib/gdnb/: dune  gdnb.ml  gdnb.mli
lib/matrix/: dune  matrix.ml  matrix.mli
lib/polynome/: dune  polynome.ml  polynome.mli
test/: dune  matrix_test.ml  polynome_test.ml  tests.ml
