opam-version: "1.0"
name: "Bench"
maintainer: "yahiyanis@gmail.com"
authors: ["Yannis Yahi"]
license: "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "alcotest" {with-test}
  "bisect_ppx" {dev & >= "2.0.0"}
]
