(lang dune 2.0.1)
(generate_opam_files true)

(name projet)
(authors "Yannis Yahi")

(package
 (name polynome)
 (synopsis "Bibliotéque permettant de manipuler des polynomes ")
 (documentation "https://github.io/pop")
 (description "\
 Permet d'effectuer les opérations usuelles sur les polynomes

")

)

(package
 (name matrix)
 (synopsis "Bibliotéque permettant de manipuler des polynomes ")
 (documentation "https://github.io/pop")
 (description "\
 Permet d'effectuer les opérations usuelles sur les polynomes

")

)